# cli_weather

./: .gitignore  main.py  prueba.drawio  pyproject.toml
