[tool.poetry]
name = "weatherapp"
version = "0.1.0"
description = ""
authors = ["Ernesto Crespo <ecrespo@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2023.3"
geopy = "^2.3.0"
pillow = "^9.5.0"
timezonefinder = {extras = ["pytz"], version = "^6.2.0"}
httpx = "^0.23.3"
nominatim = "^0.1"
typer = "^0.7.0"
click = "^8.1.3"
rich = "^13.3.3"
deep-translator = "^1.10.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
